--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>SQL</h3>
+              <h3>Mysql</h3>
               <div class="progress">
                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
                   aria-valuemin="0" aria-valuemax="100" style="width:70%">
